--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Zend Certified Magento Developer">
     <title>Volodymyr Konstanchuk</title>
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/style.css"/>
 </head>
 <body>
 <div class="about-me">
@@ -14,7 +14,7 @@
         <h1>Volodymyr Konstanchuk</h1>
         <span>Everything is possible</span>
         <a href="http://www.zend.com/en/yellow-pages/ZEND029508" target="_blank" rel="nofollow">
-            <img src="images/zcpe.jpg" alt="ZCPE">
+            <img src="/images/zcpe.jpg" alt="ZCPE">
         </a>
     </div>
     <div class="position">Magento Back-End Developer</div>
